<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">مجید قرآن</string>
    <string name="action_settings">Settings</string>
    <string name="page">Page</string>
    <string name="pref_ghary">انتخاب قاری</string>
    <string name="pref_ghary_summary">قاری را انتخاب کنید</string>
    <string name="menu_settings">تنظیمات</string>
    <string name="pref_title">تنظیمات قرآن</string>
    <string name="pref_fontـ_summary">قلم خود را انتخاب کنید</string>
    <string name="pref_font">انتخاب قلم</string>

</resources>